add centering styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Pick A Book Category</h1>
+    <h1>Lookng For Something New To Read?</h1>
+    <h2>Pick A Category And You Will Be Recomended One Of Over 207,000 Books From Amazon.com Inc. Marketplace</h2>
+    <h3>Pick A Book Category</h3>
     <form action="/" method="post">
         <select name="bookType">
             <option value="default"></option>
@@ -44,6 +47,5 @@
         </select>
         <button type = "submit">Get Recomendation!</button>
     </form>
-   
 </body>
 </html>
