--- a/views/book.ejs
+++ b/views/book.ejs
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="book.css">
+
 </head>
 <body>
+    <h4 class = "text"> Title: <%= title %></h4>
+    <h5 class = "text">  Author: <%= author%></h5>
+    <img class = "bookImage" src= <%=image %> alt="Girl in a jacket">
+    <!-- <h4 class = "text"> 
+        <a href= "https://www.amazon.com/dp/ <%= bookLink %>" target = "__blank">See Book On Amazon</a>
+    </h4> -->
     
-    <h4><%= title %></h4>
-    <h5><%= author%></h5>
-    <img src= <%=image %> alt="Girl in a jacket">
+    <p class = "text">
+        <a href="/">Pick A New Book</a>
+    </p>
+    
 </body>
 </html>
